[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/dialogue_nodes/nodes/dialogueNode.gd" type="Script" id=1]

[node name="DialogueNode" type="GraphNode"]
margin_right = 200.0
margin_bottom = 201.0
rect_min_size = Vector2( 200, 200 )
title = "Dialogue"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = true
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeakerLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 184.0
margin_bottom = 38.0
text = "Speaker"

[node name="Speaker" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 39.0
margin_right = 184.0
margin_bottom = 63.0
hint_tooltip = "The name of the speaker shown in the dialogues."

[node name="DialogueLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 64.0
margin_right = 184.0
margin_bottom = 78.0
text = "Dialogue"

[node name="Dialogue" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 79.0
margin_right = 184.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 91 )
hint_tooltip = "The dialogue displayed in the DialogueBox.
Use [bbcodes] to add extra effects to your dialogue."
size_flags_vertical = 3
syntax_highlighting = true
highlight_all_occurrences = true
wrap_enabled = true

[node name="Option1" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 171.0
margin_right = 184.0
margin_bottom = 195.0
placeholder_text = "Option1"

[connection signal="resize_request" from="." to="." method="_on_resize"]
[connection signal="text_changed" from="Speaker" to="." method="_on_node_modified"]
[connection signal="text_changed" from="Dialogue" to="." method="_on_node_modified"]
